improve swagger doc, added auth middleware & routes grouping
