# routes/user.routes.go
@@ -1,37 +1,50 @@
 package routes
 
 import (
-	"github.com/gorilla/mux"
-
 	Ctrl "email/controllers"
-
 	_ "email/docs"
+	M "email/middleware"
+	"net/http"
+	"os"
 
+	"github.com/gorilla/mux"
+	cors "github.com/rs/cors"
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-// @title Email services API
-// @version 1.0
-// @description A service where users can register and send an email & do live chat.
-// @termsOfService http://swagger.io/terms/
-// @contact.name API Support
-// @contact.email sandeepk@gmail.com
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:3000
-// @BasePath /
-
-func SetupRouter() *mux.Router {
+func SetupRouter() http.Handler {
 	router := mux.NewRouter()
 
-	router.HandleFunc("/", Ctrl.HomeController).Methods("GET")
+	// Api Prefix
+	apiPrefix := os.Getenv("API_PREFIX")
+	// version 1
+	apiVersion := os.Getenv("API_VERSION")
 
-	router.HandleFunc("/signin", Ctrl.SignInController).Methods("Post")
-	router.HandleFunc("/signup", Ctrl.SignUpController).Methods("Post")
+	apiV1 := router.PathPrefix("/" + apiPrefix + "/" + apiVersion).Subrouter()
 
-	router.HandleFunc("/compose", Ctrl.EmailComposeController).Methods("Post")
-	router.HandleFunc("/refreshToken", Ctrl.RefreshTokenController).Methods("Post")
+	getR := apiV1.Methods(http.MethodGet).Subrouter()
+	getR.HandleFunc("", Ctrl.HomeController).Schemes("http").Host("localhost:3000")
+
+	postR := apiV1.Methods(http.MethodPost).Subrouter()
+	postR.HandleFunc("/signin", Ctrl.SignInController)
+	postR.HandleFunc("/signup", Ctrl.SignUpController)
+	postR.HandleFunc("/refreshToken", Ctrl.RefreshTokenController)
+	postR.HandleFunc("/compose", M.Chain(Ctrl.EmailComposeController, M.VerifyUser()))
 
 	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
-	return router
+
+	// logger middleware
+	router.Use(M.LoggingMiddleware)
+
+	// Apply the middleware to the router
+	c := cors.New(cors.Options{
+		AllowedOrigins:   []string{"*"},
+		AllowedMethods:   []string{"GET", "POST"},
+		AllowedHeaders:   []string{"Authorization, Content-Type"},
+		MaxAge:           50, // in seconds
+		AllowCredentials: true,
+	})
+	handler := c.Handler(router)
+
+	return handler
 }
